--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<img id="bgimg" src="BGIMG_1.jpeg" class="fixed-img">
+<style>
+    .fixed-img {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60vw;
+  max-width: 600px;
+  z-index: -1; /* 背景扱いにしたい場合 */
+  pointer-events: none; /* クリック無効 */
+}
+</style>
+<script>
+  let index = 1;
+  const maxImages = 10;
+  const img = document.getElementById("bgimg");
 
+  setInterval(() => {
+    index++;
+    if (index > maxImages) index = 1;
+    img.src = `BGIMG_${index}.jpeg`;
+  }, 1000); // 1000ms = 1秒ごと
+</script>
