--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
-<img id="bgimg" src="BGIMG_1.jpeg" class="fixed-img">
+<img id="bgimg" src="BGIMG_1.jpeg" class="fullscreen-bg">
 <style>
-    .fixed-img {
+  .fullscreen-bg {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 60vw;
-  max-width: 600px;
-  z-index: -1; /* 背景扱いにしたい場合 */
-  pointer-events: none; /* クリック無効 */
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+
+  object-fit: cover; /* 画面いっぱいに */
+  z-index: -1;       /* 背景として扱う */
+  pointer-events: none;
+
+  opacity: 1;
+  transition: opacity 2s ease-in-out; /* フェード速度 */
 }
 </style>
 <script>
-  let index = 1;
-  const maxImages = 10;
   const img = document.getElementById("bgimg");
+  const maxImages = 10;
 
-  setInterval(() => {
-    index++;
-    if (index > maxImages) index = 1;
-    img.src = `BGIMG_${index}.jpeg`;
-  }, 100000); // 1000ms = 1秒ごと
+  let index = 1;
+
+  // 3〜5分（ランダム）
+  function getInterval() {
+    return (Math.random() * 2 + 3) * 60 * 1000;
+  }
+
+  function changeImage() {
+    // フェードアウト
+    img.style.opacity = 0;
+
+    setTimeout(() => {
+      index++;
+      if (index > maxImages) index = 1;
+
+      img.src = `BGIMG_${index}.jpeg`;
+
+      // フェードイン
+      img.style.opacity = 1;
+    }, 2000); // CSSのtransition時間と合わせる
+  }
+
+  function loop() {
+    setTimeout(() => {
+      changeImage();
+      loop();
+    }, getInterval());
+  }
+
+  loop();
 </script>
