--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   // 3〜5分（ランダム）
   function getInterval() {
-    return (Math.random() * 2 + 3) * 60 * 1000;
+    return 1000;
   }
 
   function changeImage() {
