--- a/index.html
+++ b/index.html
@@ -1,52 +1,98 @@
-<img id="bgimg" src="BGIMG_1.jpeg" class="fullscreen-bg">
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>Fullscreen Background Slideshow</title>
 <style>
-  .fullscreen-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
+  html, body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-  object-fit: cover; /* 画面いっぱいに */
-  z-index: -1;       /* 背景として扱う */
-  pointer-events: none;
+  /* 背景コンテナ */
+  #bg-container {
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+    overflow: hidden;
+  }
 
-  opacity: 1;
-  transition: opacity 2s ease-in-out; /* フェード速度 */
-}
+  /* 背景画像（2枚重ねてクロスフェード） */
+  .bg-img {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;              /* 拡大率・画面比率対応 */
+    opacity: 0;
+    transition: opacity 2.5s ease-in-out;
+    pointer-events: none;
+  }
+
+  .bg-img.active {
+    opacity: 1;
+  }
+
+  /* サンプル用コンテンツ */
+  main {
+    padding: 40px;
+    color: white;
+    font-size: 24px;
+  }
 </style>
+</head>
+<body>
+
+<!-- 背景 -->
+<div id="bg-container">
+  <img class="bg-img active" src="BGIMG_1.jpeg">
+  <img class="bg-img" src="">
+</div>
+
+<!-- ページ内容 -->
+<main>
+  <h1>縦長ページ</h1>
+  <p>スクロールしても背景は固定</p>
+  <div style="height:3000px"></div>
+</main>
+
 <script>
-  const img = document.getElementById("bgimg");
-  const maxImages = 10;
-
-  let index = 1;
-
-  // 3〜5分（ランダム）
-  function getInterval() {
-    return 1000;
+  // 画像リスト
+  const images = [];
+  for (let i = 1; i <= 10; i++) {
+    images.push(`BGIMG_${i}.jpeg`);
   }
 
-  function changeImage() {
-    // フェードアウト
-    img.style.opacity = 0;
+  const bgImgs = document.querySelectorAll(".bg-img");
+  let visible = 0;
+  let index = 0;
 
-    setTimeout(() => {
-      index++;
-      if (index > maxImages) index = 1;
+  const INTERVAL = 10000; // 10秒
 
-      img.src = `BGIMG_${index}.jpeg`;
+  function changeBackground() {
+    const next = (visible + 1) % 2;
+    index = (index + 1) % images.length;
 
-      // フェードイン
-      img.style.opacity = 1;
-    }, 2000); // CSSのtransition時間と合わせる
+    bgImgs[next].src = images[index];
+
+    // クロスフェード
+    bgImgs[visible].classList.remove("active");
+    bgImgs[next].classList.add("active");
+
+    visible = next;
   }
 
-  function loop() {
-    setTimeout(() => {
-      changeImage();
-      loop();
-    }, getInterval());
-  }
+  setInterval(changeBackground, INTERVAL);
 
-  loop();
+  // ズーム・リサイズ対策（保険）
+  window.addEventListener("resize", () => {
+    bgImgs.forEach(img => {
+      img.style.width = "100%";
+      img.style.height = "100%";
+    });
+  });
 </script>
+
+</body>
+</html>
