--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     overflow: hidden;
   }
 
-  /* 背景画像（2枚重ねてクロスフェード） */
+  /* 背景画像（2枚でクロスフェード） */
   .bg-img {
     position: absolute;
     inset: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;              /* 拡大率・画面比率対応 */
+    object-fit: cover;
     opacity: 0;
     transition: opacity 2.5s ease-in-out;
     pointer-events: none;
@@ -32,6 +32,30 @@
 
   .bg-img.active {
     opacity: 1;
+  }
+
+  /* ボタンUI */
+  #controls {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    gap: 10px;
+    z-index: 10;
+  }
+
+  #controls button {
+    padding: 10px 16px;
+    font-size: 14px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+  }
+
+  #controls button:hover {
+    background: rgba(0,0,0,0.8);
   }
 
   /* サンプル用コンテンツ */
@@ -50,15 +74,21 @@
   <img class="bg-img" src="">
 </div>
 
+<!-- 切り替えボタン -->
+<div id="controls">
+  <button id="prev">◀ 前へ</button>
+  <button id="next">次へ ▶</button>
+</div>
+
 <!-- ページ内容 -->
 <main>
   <h1>縦長ページ</h1>
-  <p>スクロールしても背景は固定</p>
+  <p>背景は10秒ごとに自動切替＋手動操作可能</p>
   <div style="height:3000px"></div>
 </main>
 
 <script>
-  // 画像リスト
+  /* 画像リスト */
   const images = [];
   for (let i = 1; i <= 10; i++) {
     images.push(`BGIMG_${i}.jpeg`);
@@ -69,23 +99,47 @@
   let index = 0;
 
   const INTERVAL = 10000; // 10秒
+  let timer;
 
-  function changeBackground() {
+  function showImage(newIndex) {
     const next = (visible + 1) % 2;
-    index = (index + 1) % images.length;
+    index = (newIndex + images.length) % images.length;
 
     bgImgs[next].src = images[index];
 
-    // クロスフェード
     bgImgs[visible].classList.remove("active");
     bgImgs[next].classList.add("active");
 
     visible = next;
   }
 
-  setInterval(changeBackground, INTERVAL);
+  function nextImage() {
+    showImage(index + 1);
+    resetTimer();
+  }
 
-  // ズーム・リサイズ対策（保険）
+  function prevImage() {
+    showImage(index - 1);
+    resetTimer();
+  }
+
+  function startTimer() {
+    timer = setInterval(() => {
+      showImage(index + 1);
+    }, INTERVAL);
+  }
+
+  function resetTimer() {
+    clearInterval(timer);
+    startTimer();
+  }
+
+  document.getElementById("next").addEventListener("click", nextImage);
+  document.getElementById("prev").addEventListener("click", prevImage);
+
+  startTimer();
+
+  /* ズーム・リサイズ対策（保険） */
   window.addEventListener("resize", () => {
     bgImgs.forEach(img => {
       img.style.width = "100%";
