--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <!-- 背景 -->
 <div id="bg-container">
-  <img class="bg-img active" src="bgimg-1.jpg">
+  <img class="bg-img active" src="background-image/bgimg-1.jpg">
   <img class="bg-img" src="">
 </div>
 
