--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <!-- 背景 -->
 <div id="bg-container">
-  <img class="bg-img active" src="background-image/bgimg-1.jpg">
+  <img class="bg-img active" src="background-image/">
   <img class="bg-img" src="">
 </div>
 
@@ -91,7 +91,7 @@
   /* 画像リト */
   const images = [];
   for (let i = 1; i <= 10; i++) {
-    images.push(`bgimg-${i}.jpg`);
+    images.push(`background-image/bg${i}.jpg`);
   }
 
   const bgImgs = document.querySelectorAll(".bg-img");
