--- a/index.html
+++ b/index.html
@@ -578,45 +578,243 @@
 
       <section class="section" id="section-memo">
         <h1 class="section-title">Memo</h1>
-        <div class="cards1">
-          <div class="card wide tall">
-            <div class="card-header">
-              <div class="card-title">
-                <div class="card-icon">
-                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-                    <polyline points="14 2 14 8 20 8"/>
-                  </svg>
+        <div class="memo-standalone-container">
+          <div class="container">
+            <aside class="sidebar">
+              <div class="sidebar-header">
+                <div class="app-title">
+                  <h1>
+                    <svg class="icon-lg" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                      <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+                      <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+                    </svg>
+                    Memo
+                  </h1>
+                  <div class="settings-btns">
+                    <button class="icon-btn" id="helpBtn" title="ヘルプ">
+                      <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="10"/>
+                        <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/>
+                        <line x1="12" y1="17" x2="12.01" y2="17"/>
+                      </svg>
+                    </button>
+                  </div>
                 </div>
-                Notes
-              </div>
-              <button class="card-action" onclick="clearMemo()">Clear</button>
-            </div>
-            <div class="card-content">
-              <div class="toolbar">
-                <button class="toolbar-btn" onclick="fmt('bold')" title="Bold (Ctrl+B)">B</button>
-                <button class="toolbar-btn" onclick="fmt('underline')" title="Underline (Ctrl+U)">U</button>
-                <button class="toolbar-btn" onclick="fmt('larger')" title="Larger">A+</button>
-                <button class="toolbar-btn" onclick="fmt('smaller')" title="Smaller">A-</button>
-                <label class="toolbar-btn" style="cursor:pointer;" title="Upload File">
-                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                    <polyline points="17 8 12 3 7 8"/>
-                    <line x1="12" y1="3" x2="12" y2="15"/>
+                <div class="search-wrapper">
+                  <svg class="icon search-icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                    <circle cx="11" cy="11" r="8"/>
+                    <path d="m21 21-4.35-4.35"/>
                   </svg>
-                  <input type="file" class="file-upload" id="memo-file" onchange="handleMemoFile(event)" multiple>
-                </label>
-                <button class="toolbar-btn" onclick="insertLink()" title="Insert Link">
-                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"/>
-                    <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"/>
+                  <input type="text" class="search-box" id="searchBox" placeholder="メモを検索...">
+                </div>
+                <div class="filter-row">
+                  <select class="filter-select" id="colorFilter">
+                    <option value="">すべての色</option>
+                    <option value="red">赤</option>
+                    <option value="orange">オレンジ</option>
+                    <option value="yellow">黄色</option>
+                    <option value="green">緑</option>
+                    <option value="blue">青</option>
+                    <option value="purple">紫</option>
+                    <option value="pink">ピンク</option>
+                  </select>
+                  <select class="filter-select" id="tagFilter">
+                    <option value="">すべてのタグ</option>
+                    <option value="work">work</option>
+                    <option value="personal">personal</option>
+                    <option value="ideas">ideas</option>
+                    <option value="todo">todo</option>
+                  </select>
+                </div>
+                <div class="filter-tabs">
+                  <button class="filter-tab active" data-filter="all">すべて</button>
+                  <button class="filter-tab" data-filter="favorites">お気に入り</button>
+                  <button class="filter-tab" data-filter="pinned">ピン留め</button>
+                  <button class="filter-tab" data-filter="archived">アーカイブ</button>
+                </div>
+                <button class="new-memo-btn" id="newMemoBtn">
+                  <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                    <line x1="12" y1="5" x2="12" y2="19"/>
+                    <line x1="5" y1="12" x2="19" y2="12"/>
                   </svg>
+                  新規メモ
                 </button>
               </div>
-              <div class="memo-files" id="memo-files"></div>
-              <div class="memo" id="memo" contenteditable="true" data-placeholder="Start typing..." onfocus="focused=this" oninput="saveMemo()"></div>
+              <div class="toolbar">
+                <div class="view-controls">
+                  <button class="control-btn active" data-view="list" title="リスト表示">
+                    <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                      <line x1="8" y1="6" x2="21" y2="6"/>
+                      <line x1="8" y1="12" x2="21" y2="12"/>
+                      <line x1="8" y1="18" x2="21" y2="18"/>
+                      <line x1="3" y1="6" x2="3.01" y2="6"/>
+                      <line x1="3" y1="12" x2="3.01" y2="12"/>
+                      <line x1="3" y1="18" x2="3.01" y2="18"/>
+                    </svg>
+                  </button>
+                  <button class="control-btn" data-view="grid" title="グリッド表示">
+                    <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                      <rect x="3" y="3" width="7" height="7"/>
+                      <rect x="14" y="3" width="7" height="7"/>
+                      <rect x="14" y="14" width="7" height="7"/>
+                      <rect x="3" y="14" width="7" height="7"/>
+                    </svg>
+                  </button>
+                </div>
+                <div class="sort-controls">
+                  <select class="control-btn" id="sortSelect">
+                    <option value="updated">更新日</option>
+                    <option value="created">作成日</option>
+                    <option value="title">タイトル</option>
+                  </select>
+                </div>
+              </div>
+              <div class="memo-list" id="memoList"></div>
+            </aside>
+
+            <main class="main-editor" id="mainEditor">
+              <div class="empty-state">
+                <div class="empty-state-text">メモを選択するか、新しいメモを作成してください</div>
+                <div class="empty-state-hint">ショートカット: Ctrl+N で新規メモ</div>
+              </div>
+            </main>
+          </div>
+
+          <div class="context-menu" id="contextMenu">
+            <div class="context-menu-item" data-action="edit">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+              </svg>
+              編集
+            </div>
+            <div class="context-menu-item" data-action="duplicate">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"/>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/>
+              </svg>
+              複製
+            </div>
+            <div class="context-menu-divider"></div>
+            <div class="context-menu-item" data-action="favorite">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/>
+              </svg>
+              お気に入り切替
+            </div>
+            <div class="context-menu-item" data-action="pin">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"/>
+              </svg>
+              ピン留め切替
+            </div>
+            <div class="context-menu-submenu">
+              <div class="context-menu-item">
+                <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                  <circle cx="13.5" cy="6.5" r=".5"/>
+                  <circle cx="17.5" cy="10.5" r=".5"/>
+                  <circle cx="8.5" cy="7.5" r=".5"/>
+                  <circle cx="6.5" cy="12.5" r=".5"/>
+                  <path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10c.926 0 1.648-.746 1.648-1.688 0-.437-.18-.835-.437-1.125-.29-.289-.438-.652-.438-1.125a1.64 1.64 0 0 1 1.668-1.668h1.996c3.051 0 5.555-2.503 5.555-5.554C21.965 6.012 17.461 2 12 2z"/>
+                </svg>
+                色を変更
+              </div>
+              <div class="context-submenu">
+                <div class="context-menu-item" data-action="color" data-color="">
+                  <div class="color-dot" style="background: var(--text-tertiary);"></div>
+                  なし
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="red">
+                  <div class="color-dot" style="background: var(--accent-red);"></div>
+                  赤
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="orange">
+                  <div class="color-dot" style="background: var(--accent-orange);"></div>
+                  オレンジ
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="yellow">
+                  <div class="color-dot" style="background: var(--accent-yellow);"></div>
+                  黄色
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="green">
+                  <div class="color-dot" style="background: var(--accent-green);"></div>
+                  緑
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="blue">
+                  <div class="color-dot" style="background: var(--accent-blue);"></div>
+                  青
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="purple">
+                  <div class="color-dot" style="background: var(--accent-purple);"></div>
+                  紫
+                </div>
+                <div class="context-menu-item" data-action="color" data-color="pink">
+                  <div class="color-dot" style="background: var(--accent-pink);"></div>
+                  ピンク
+                </div>
+              </div>
+            </div>
+            <div class="context-menu-divider"></div>
+            <div class="context-menu-item" data-action="archive">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"/>
+              </svg>
+              アーカイブ
+            </div>
+            <div class="context-menu-item" data-action="export">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                <polyline points="7 10 12 15 17 10"/>
+                <line x1="12" y1="15" x2="12" y2="3"/>
+              </svg>
+              エクスポート
+            </div>
+            <div class="context-menu-divider"></div>
+            <div class="context-menu-item danger" data-action="delete">
+              <svg class="icon" viewBox="0 0 24 24" fill="white" stroke="currentColor" stroke-width="2">
+                <polyline points="3 6 5 6 21 6"/>
+                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+              </svg>
+              削除
             </div>
           </div>
+
+          <div class="modal" id="helpModal">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h2 class="modal-title">ショートカットキー</h2>
+              </div>
+              <div class="modal-body">
+                <div class="shortcut-list">
+                  <div class="shortcut-item">
+                    <span>新規メモ</span>
+                    <span class="shortcut-key">Ctrl+N</span>
+                  </div>
+                  <div class="shortcut-item">
+                    <span>保存</span>
+                    <span class="shortcut-key">Ctrl+S</span>
+                  </div>
+                  <div class="shortcut-item">
+                    <span>検索</span>
+                    <span class="shortcut-key">Ctrl+F</span>
+                  </div>
+                  <div class="shortcut-item">
+                    <span>削除</span>
+                    <span class="shortcut-key">Ctrl+D</span>
+                  </div>
+                  <div class="shortcut-item">
+                    <span>お気に入り切替</span>
+                    <span class="shortcut-key">Ctrl+B</span>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-primary" id="closeHelpBtn">閉じる</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="toast" id="toast"></div>
         </div>
       </section>
 
