--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
     .memo-app-wrapper .memo-list {
       flex: 1;
       overflow-y: auto;
-      height: 100%;
+      padding-left: 8px;
+      padding-right: 8px;
     }
 
     .memo-app-wrapper .memo-list.grid-view {
