--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
       padding-left: 8px;
       padding-right: 8px;
       padding-top: 8px;
+      padding-bottom: 8px;
     }
 
     .memo-app-wrapper .memo-list.grid-view {
