--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
       padding-right: 8px;
       padding-top: 8px;
       padding-bottom: 8px;
+      max-height: 100%;
     }
 
     .memo-app-wrapper .memo-list.grid-view {
