--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
     .memo-app-wrapper .memo-list {
       flex: 1;
       overflow-y: auto;
+      overflow: auto;
       padding-left: 8px;
       padding-right: 8px;
       padding-top: 8px;
